# mero

./: LICENSE  README.md
backend/: .env.example  docker-compose.yml  nginx.conf
backend/architecture/: services.drawio
backend/auth-service/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
backend/auth-service/auth_service/: __main__.py
backend/auth-service/auth_service/models/: events_model.py  events_participants_model.py  events_partners_model.py  masterclasses_model.py  participants_masterclasses_model.py  participants_model.py  partners_model.py  questions_model.py
backend/auth-service/auth_service/routers/: __init__.py  event.py  partner.py
backend/auth-service/auth_service/schemas/: event_login.py  event_register.py  partner_register.py
backend/auth-service/auth_service/utils/: async_session.py  config.py  jwt_controller.py
backend/event-service/: .env.example  Dockerfile  Makefile  pyproject.toml
backend/event-service/event_service/: __main__.py
backend/event-service/event_service/models/: __init__.py  events_model.py  events_participants_model.py  events_partners_model.py  masterclasses_model.py  participants_masterclasses_model.py  participants_model.py  partners_model.py  questions_model.py
backend/event-service/event_service/routers/: __init__.py  participant.py
backend/event-service/event_service/schemas/: participant_create.py  partner_login.py
backend/event-service/event_service/utils/: async_session.py  config.py  jwt_controller.py  token_generator.py
frontend/: README.md  pubspec.yaml
frontend/lib/: Icons.dart  (+6 more)
(+18 files in other folders)
